--- a/Programming2/.classpath
+++ b/Programming2/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="programming2/|programming2/|programming2code/" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
